--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -7,5 +7,6 @@
   "bracketSpacing": true,
   "arrowParens": "always",
   "proseWrap": "always",
-  "consecutiveLines": 80
+  "consecutiveLines": 80,
+  "plugins": ["prettier-plugin-tailwindcss"]
 }
