--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "npm-run-all2": "^7.0.1",
     "postcss": "^8.4.49",
     "prettier": "^3.4.2",
+    "prettier-plugin-tailwindcss": "^0.6.9",
     "tailwindcss": "^3.4.17",
     "typescript": "~5.6.3",
     "vite": "^5.4.10",
