--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "pinia": "^2.2.6",
+    "pocketbase": "^0.25.0",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5"
   },
