--- a/dev-compose.yml
+++ b/dev-compose.yml
@@ -3,6 +3,9 @@ services:
     build:
       context: .
       target: develop
+      args:
+        VITE_PB_URL: 'http://localhost:8090/'
+        VITE_LLMS_URL: 'http://localhost:8000/llms/'
     image: llms-micro-blog-web:latest
     ports:
       - '5173:5173'
